# hackthon_openthon_opendata

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
deploy/: celery-start.sh
deploy/web/: Dockerfile  fastapi-start.sh
deploy/worker/: Dockerfile  celery-start.sh
src/: celery_app.py  fastapi_app.py  resolvrisk.py  worker.py
