[tool.poetry]
name = "hackthon_openthon_opendata"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
celery = "^5.2.0"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
pyqldb = "^3.2.2"
boto3 = "^1.20.5"
platformdirs = "^2.4.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
